src/org/api/rpc/1.2.12/rpc.md
---
title: "rpc package · @imqueue/rpc"
---

<!-- Do not edit this file. It is automatically generated by API Documenter. -->

[Home](/api/) &gt; [@imqueue/rpc](/api/rpc/1.2.12/)

## rpc package

## Classes

<table><thead><tr><th>

Class


</th><th>

Description


</th></tr></thead>
<tbody><tr><td>

[Description](/api/rpc/1.2.12/rpc.description/)


</td><td>


</td></tr>
<tr><td>

[IMQCache](/api/rpc/1.2.12/rpc.imqcache/)


</td><td>

Generic cache registry


</td></tr>
<tr><td>

[IMQDelay](/api/rpc/1.2.12/rpc.imqdelay/)


</td><td>


</td></tr>
<tr><td>

[IMQLock](/api/rpc/1.2.12/rpc.imqlock/)


</td><td>

Class IMQLock. Implements promise-based locks.


</td></tr>
<tr><td>

[IMQRPCDescription](/api/rpc/1.2.12/rpc.imqrpcdescription/)


</td><td>


</td></tr>
<tr><td>

[RedisCache](/api/rpc/1.2.12/rpc.rediscache/)


</td><td>

Class RedisCache. Implements cache engine over redis.


</td></tr>
</tbody></table>

## Abstract Classes

<table><thead><tr><th>

Abstract Class


</th><th>

Description


</th></tr></thead>
<tbody><tr><td>

[IMQClient](/api/rpc/1.2.12/rpc.imqclient/)


</td><td>

Class IMQClient - base abstract class for service clients.


</td></tr>
<tr><td>

[IMQService](/api/rpc/1.2.12/rpc.imqservice/)


</td><td>

Class IMQService Basic abstract service (server-side) implementation


</td></tr>
</tbody></table>

## Functions

<table><thead><tr><th>

Function


</th><th>

Description


</th></tr></thead>
<tbody><tr><td>

[expose()](/api/rpc/1.2.12/rpc.expose/)


</td><td>

Expose decorator factory

 {<!-- -->( target: object, methodName: (string), descriptor: TypedPropertyDescriptor<!-- -->&lt;<!-- -->(...args: any\[\]) =<!-- -->&gt; any<!-- -->&gt; ) =<!-- -->&gt; void<!-- -->} - decorator function


</td></tr>
<tr><td>

[fileExists(path)](/api/rpc/1.2.12/rpc.fileexists/)


</td><td>

Checks if file exists at given path


</td></tr>
<tr><td>

[forgetPid(name, id, logger, path)](/api/rpc/1.2.12/rpc.forgetpid/)


</td><td>

Removes pid file for a given name and id


</td></tr>
<tr><td>

[IMQError(code, message, stack, method, args)](/api/rpc/1.2.12/rpc.imqerror/)


</td><td>


</td></tr>
<tr><td>

[lock(enabled)](/api/rpc/1.2.12/rpc.lock/)


</td><td>

@<!-- -->lock() decorator implementation Will make all simultaneous similar method calls locked to be resolved with the first obtained values. Similarity is identified by a bypassed method argument values.

 {<!-- -->( target: any, methodName: (string), descriptor: TypedPropertyDescriptor<!-- -->&lt;<!-- -->(...args: any\[\]) =<!-- -->&gt; any<!-- -->&gt; ) =<!-- -->&gt; void<!-- -->}


</td></tr>
<tr><td>

[mkdir(path)](/api/rpc/1.2.12/rpc.mkdir/)


</td><td>

Promisable mkdir


</td></tr>
<tr><td>

[osUuid()](/api/rpc/1.2.12/rpc.osuuid/)


</td><td>

Returns machine UUID


</td></tr>
<tr><td>

[pid(name, path)](/api/rpc/1.2.12/rpc.pid/)


</td><td>

Returns increment-based process identifier for a given name


</td></tr>
<tr><td>

[property(type, isOptional)](/api/rpc/1.2.12/rpc.property/)


</td><td>

Implements '<!-- -->@<!-- -->property' decorator factory This is used to specify complex service types to be exposed


</td></tr>
<tr><td>

[remote()](/api/rpc/1.2.12/rpc.remote/)


</td><td>

Implements '<!-- -->@<!-- -->remote' decorator factory

 {<!-- -->( target: any, methodName: (string), descriptor: TypedPropertyDescriptor<!-- -->&lt;<!-- -->(...args: any\[\]) =<!-- -->&gt; any<!-- -->&gt; ) =<!-- -->&gt; void<!-- -->}


</td></tr>
<tr><td>

[signature(className, methodName, args)](/api/rpc/1.2.12/rpc.signature/)


</td><td>

Constructs and returns hash string for a given set of className, methodName and arguments.


</td></tr>
<tr><td>

[writeFile(path, content)](/api/rpc/1.2.12/rpc.writefile/)


</td><td>

Promisable writeFile


</td></tr>
</tbody></table>

## Interfaces

<table><thead><tr><th>

Interface


</th><th>

Description


</th></tr></thead>
<tbody><tr><td>

[ArgDescription](/api/rpc/1.2.12/rpc.argdescription/)


</td><td>

Method argument description


</td></tr>
<tr><td>

[CacheDecorator](/api/rpc/1.2.12/rpc.cachedecorator/)


</td><td>


</td></tr>
<tr><td>

[CacheDecoratorOptions](/api/rpc/1.2.12/rpc.cachedecoratoroptions/)


</td><td>


</td></tr>
<tr><td>

[ICache](/api/rpc/1.2.12/rpc.icache/)


</td><td>


</td></tr>
<tr><td>

[ICacheConstructor](/api/rpc/1.2.12/rpc.icacheconstructor/)


</td><td>


</td></tr>
<tr><td>

[IMQClientOptions](/api/rpc/1.2.12/rpc.imqclientoptions/)


</td><td>


</td></tr>
<tr><td>

[IMQRPCError](/api/rpc/1.2.12/rpc.imqrpcerror/)


</td><td>

Response error data structure, which service returns if error occurred during service method execution.


</td></tr>
<tr><td>

[IMQRPCRequest](/api/rpc/1.2.12/rpc.imqrpcrequest/)


</td><td>

Request message data structure expected to be handled by a service


</td></tr>
<tr><td>

[IMQRPCResponse](/api/rpc/1.2.12/rpc.imqrpcresponse/)


</td><td>

Response message data structure, which service replies to handled requests.


</td></tr>
<tr><td>

[IMQServiceOptions](/api/rpc/1.2.12/rpc.imqserviceoptions/)


</td><td>


</td></tr>
<tr><td>

[IRedisCacheOptions](/api/rpc/1.2.12/rpc.irediscacheoptions/)


</td><td>


</td></tr>
<tr><td>

[MethodDescription](/api/rpc/1.2.12/rpc.methoddescription/)


</td><td>

Method description


</td></tr>
<tr><td>

[MethodsCollectionDescription](/api/rpc/1.2.12/rpc.methodscollectiondescription/)


</td><td>

Methods collection description


</td></tr>
<tr><td>

[PropertyDescription](/api/rpc/1.2.12/rpc.propertydescription/)


</td><td>

Service type description


</td></tr>
<tr><td>

[ReturnValueDescription](/api/rpc/1.2.12/rpc.returnvaluedescription/)


</td><td>

Return value description


</td></tr>
<tr><td>

[ServiceClassDescription](/api/rpc/1.2.12/rpc.serviceclassdescription/)


</td><td>

Service class description


</td></tr>
<tr><td>

[ServiceDescription](/api/rpc/1.2.12/rpc.servicedescription/)


</td><td>

Service description


</td></tr>
<tr><td>

[TypeDescription](/api/rpc/1.2.12/rpc.typedescription/)


</td><td>

Service types description


</td></tr>
<tr><td>

[TypesDescription](/api/rpc/1.2.12/rpc.typesdescription/)


</td><td>

Entire service types metadata structure


</td></tr>
</tbody></table>

## Variables

<table><thead><tr><th>

Variable


</th><th>

Description


</th></tr></thead>
<tbody><tr><td>

[cache](/api/rpc/1.2.12/rpc.cache/)


</td><td>


</td></tr>
<tr><td>

[DEFAULT\_IMQ\_CLIENT\_OPTIONS](/api/rpc/1.2.12/rpc.default_imq_client_options/)


</td><td>

Default client options

 {<!-- -->IMQClientOptions<!-- -->}


</td></tr>
<tr><td>

[DEFAULT\_IMQ\_SERVICE\_OPTIONS](/api/rpc/1.2.12/rpc.default_imq_service_options/)


</td><td>

Default service options

 {<!-- -->IMQServiceOptions<!-- -->}


</td></tr>
<tr><td>

[DEFAULT\_REDIS\_CACHE\_OPTIONS](/api/rpc/1.2.12/rpc.default_redis_cache_options/)


</td><td>


</td></tr>
<tr><td>

[IMQ\_PID\_DIR](/api/rpc/1.2.12/rpc.imq_pid_dir/)


</td><td>


</td></tr>
<tr><td>

[IMQ\_TMP\_DIR](/api/rpc/1.2.12/rpc.imq_tmp_dir/)


</td><td>


</td></tr>
</tbody></table>

## Type Aliases

<table><thead><tr><th>

Type Alias


</th><th>

Description


</th></tr></thead>
<tbody><tr><td>

[AcquiredLock](/api/rpc/1.2.12/rpc.acquiredlock/)


</td><td>


</td></tr>
<tr><td>

[ICacheAdapter](/api/rpc/1.2.12/rpc.icacheadapter/)


</td><td>


</td></tr>
<tr><td>

[IMQLockQueue](/api/rpc/1.2.12/rpc.imqlockqueue/)


</td><td>


</td></tr>
<tr><td>

[IMQLockTask](/api/rpc/1.2.12/rpc.imqlocktask/)


</td><td>


</td></tr>
</tbody></table>

